--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 dist: trusty
 sudo: false
 language: c
-script: make
+addons:
+    packages:
+        - cmake
+script:
+    - mkdir build && cd build && cmake .. && make
